Add promoting&suppressing members and swipe layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Groupie</string>
     <string name="title_activity_maps">Map</string>
+    <string name="promote">Promote</string>
+    <string name="suppress">Suppress</string>
+    <string name="block">Block</string>
 </resources>
