--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="qr_code_label">Make members scan QR code or enter text below manually.</string>
     <string name="invite_qr_code">Invite QR code</string>
     <string name="your_group">Your group</string>
+    <string name="tap_to_use_camera">Tap to use camera</string>
 </resources>
