--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="invite_qr_code">Invite QR code</string>
     <string name="your_group">Your group</string>
     <string name="tap_to_use_camera">Tap to use camera</string>
+    <string name="you">YOU</string>
 </resources>
