--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="your_group">Your group</string>
     <string name="tap_to_use_camera">Tap to use camera</string>
     <string name="you">YOU</string>
+    <string name="leave_group">Leave group</string>
 </resources>
