Exract kick member modal messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="no_name">No name</string>
     <string name="service_notification_text">Sending localization. Click to open group.</string>
     <string name="location_permission_not_granted">Location permissions has not been granted</string>
+    <string name="kick_member_modal_title">Kicking member</string>
+    <string name="kick_member_modal_text">Do you really want to kick %1$s?</string>
 </resources>
