--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,10 @@
     <string name="tap_to_use_camera">Tap to use camera</string>
     <string name="you">YOU</string>
     <string name="leave_group">Leave group</string>
-    <string name="no_name">No name</string>
     <string name="service_notification_text">Sending localization. Click to open group.</string>
     <string name="location_permission_not_granted">Location permissions has not been granted</string>
     <string name="kick_member_modal_title">Kicking member</string>
     <string name="kick_member_modal_text">Do you really want to kick %1$s?</string>
+    <string name="username_prompt_title">Enter username</string>
+    <string name="username_prompt_input_hint">John Doe</string>
 </resources>
