--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="username_prompt_title">Enter username</string>
     <string name="username_prompt_input_hint">John Doe</string>
     <string name="change_username">Change username</string>
+    <string name="map">Map</string>
+    <string name="members">Members</string>
+    <string name="settings">Settings</string>
 </resources>
